removed cheats, final attempt at bug squashing

--- a/style/main.css
+++ b/style/main.css
@@ -1,8 +1,14 @@
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; 
   background-color: rgb(255, 243, 233);
   font-family: system-ui, sans-serif;
   margin: 0;
@@ -308,11 +314,3 @@ div.grid-wrapper {
   }
 }
 
-@media (max-height: 340px) {
-  h1 {
-    font-size: 4vw;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    padding-top: 10px;
-  }
-}
